[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws", "headers"] }
axum-extra = "0.7.4"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
headers = "0.3.8"
serde = { version = "1.0.175", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full", "sync"] }
tokio-tungstenite = "0.19.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
uuid = { version = "1.4.0", features = ["v4", "serde"] }

